<resources>
    <string name="app_name">Login Application</string>
    <string name="signin">signin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="you_have_successfully_login_get_back_to_the_application">You have successfully login get back to the application.....</string>
    <string name="ok">OK</string>
</resources>